--- a/css/v202209/symbiota/base.css
+++ b/css/v202209/symbiota/base.css
@@ -462,8 +462,8 @@ b {
 }
 
 .screen-reader-only {
-  position: absolute;
-  left: -10000px;
+  position: absolute !important;
+  left: -10000px !important;
 }
 
 .welcome-text {
